--- a/css/styles.css
+++ b/css/styles.css
@@ -124,25 +124,26 @@ header a {
 .hero-button:hover {
   background-color: #404bbf;
 }
-.section-two{
+
+.first-list{
   display: flex;
+  text-align: center;
 }
 .first-list h3:hover{
   color: #404bbf;
 }
 .first-list li {
   list-style: none;
-
+  
 }
 .first-list li h3 {
-  display: flex;
+
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2em;
   letter-spacing: 2%;
 }
 .first-list li p {
-  width: 264px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5em;
