--- a/css/styles.css
+++ b/css/styles.css
@@ -194,11 +194,13 @@ header a {
   line-height: 1.5em;
   letter-spacing: 2%;
 }
+
 .portfolio-list{
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  text-align: center;
+  align-items: center; 
+  justify-content: center;
+  flex-direction: column;
   padding: 120px 0;
 }
 .portfolio-list ul{
@@ -209,12 +211,13 @@ header a {
 .portfolio-list li {
   list-style: none;
 }
-.portfolio-list h2 {
+.portfolio-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11em;
   letter-spacing: 2%;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 .portfolio-list h3 {
   font-weight: 500;
