portfolio title centered

--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,7 @@ header a {
   letter-spacing: 2%;
   color: #2e2f42;
   margin-bottom: 72px;
+  text-align: center;
 }
 .portfolio-list h3 {
   font-weight: 500;
